unburden-home-dir (0.3.1) UNRELEASED; urgency=low

  * Add lsof to build-dependencies (Closes: #678780)
    + Restrict build-dependency on linux-any and run test suite only on
      linux-any, would fail on kfreebsd and hurd as the test suite needs
      lsof which is currently not available on kfreebsd-any and hurd-any.
      See #589103 and #661575.

 -- Axel Beckert <abe@debian.org>  Sun, 24 Jun 2012 15:47:06 +0200

unburden-home-dir (0.3) unstable; urgency=low

  * If lsof is available, check if files to (re)move are still in use
    before (re)moving them.
    - Recommend lsof
  * Some Refactoring:
    - use Modern::Perl; add libmodern-perl-perl as dependencies.
    - use say instead of print + "perl -l". Fixes issues with double
      newlines printed by modules..
    - use for and when instead of tons of if blocks
    - replace last use of @_[...]
    - add missing trailing semicolons and explicit returns
    - remove all subroutine calls with "&" sigil
    - remove code duplication
    - use lc($var) eq 'c' instead of two string comparisons
  * Remove no more necessary eval in regexp replacement
  * Add missing close();
  * More documentation in README:
    - Add some paragraphs about reversing unburden-home-dir's effect
      (Closes: #673909)
    - Add sections How To and Common Issues + Troubleshooting
    - Reorder sections and add subsections to get a nice outline
  * Renamed README to README.md so it will be parsed as Markdown on GitHub
  * Added THANKS file
  * Add ~/.aptitude/cache to unburden-home-dir.list. (cf. #671780)
  * Fix typo in README.Debian (Closes: #673912; Thanks Touko Korpela!)

 -- Axel Beckert <abe@debian.org>  Tue, 12 Jun 2012 16:38:06 +0200

unburden-home-dir (0.2) unstable; urgency=low

  [ Klaus Umbach ]
  * Fix FTBFS: Add missing build-dependency on libfile-rsync-perl
  * Fix FTBFS: Ignore locales in moving-to-existing-subdir.t

  [ Axel Beckert ]
  * Unconditionally move files (no more uses "mv -i", likely a debugging