@@ -15,3 +15,8 @@
 # Don't run test suite on kfreebsd or hurd, i.e. only run it on linux-any
 override_dh_auto_test:
 	if dpkg-architecture -qDEB_BUILD_ARCH_OS | grep -q linux; then dh_auto_test; fi
+
+# Rename README.md to README for the Debian binary package (cf. #678630)
+override_dh_installdocs:
+	cp -p README.md README
+	dh_installdocs
